--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,3 +1,1 @@
-<div>
-    The Server Components
-</div>
+<p>{{ 'Server' }} with ID {{ serverId }} is {{ serverStatus }} and {{ getServerStatus() }}</p>
