--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-xs-12">
       <h3>
@@ -8,4 +8,28 @@
       <app-servers></app-servers>
     </div>
   </div>
+</div>
+ -->
+
+
+<div class="container mt">
+  <div class="row"></div>
+    <div class="col-xs-12">
+      <ol>
+        <li>Kiran</li>
+        <li>Rinku</li>
+        <li>Sujith</li>
+        <li>Brioo</li>
+      </ol>
+     <hr>
+     <label>Username</label>
+     <input type="text" class="form-control"
+     [(ngModel)] = "userName">
+     <p>{{ userName }}</p>
+     <button class="btn btn-primary"
+     [disabled]="userName === ''"
+     (click)="userName = ''">
+     Reset Button
+     </button>
+    </div>
 </div>
