--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container">
+<div class="container">
   <div class="row">
     <div class="col-xs-12">
       <h3>
@@ -9,10 +9,9 @@
     </div>
   </div>
 </div>
- -->
 
 
-<div class="container mt">
+<!-- <div class="container mt">
   <div class="row"></div>
     <div class="col-xs-12">
       <ol>
@@ -32,4 +31,4 @@
      Reset Button
      </button>
     </div>
-</div>
+</div> -->
