--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,5 +1,30 @@
-<div class="container">
+<div class="container ext">
   <div class="row">
+    <div class="col-xs-12">
+      <ol>
+        <li>Kiran</li>
+        <li>Rinku</li>
+        <li>Edwin</li>
+        <li>Mark</li>
+      </ol>
+      <hr>
+      <!-- <button class="btn btn-primary"
+      (click)="showSecret = !showSecret"
+      >Display Details</button> -->
+      <button class="btn btn-primary"
+      (click)="onToggleDisplay()"
+      >Display Details</button>
+      <p *ngIf="showSecret">Secret Password = tuna</p>
+      <div *ngFor="let logItem of log"
+      [ngStyle]="{'background-color': logItem >=5 ? 'blue' : 'transparent'}"
+      [ngClass]="{'white-text': logItem >= 5}">
+      {{ logItem }}
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="container">
     <div class="col-xs-12">
       <h3>
         I'm in the AppComponent
@@ -7,9 +32,7 @@
       <hr>
       <app-servers></app-servers>
     </div>
-  </div>
-</div>
-
+</div> -->
 
 <!-- <div class="container mt">
   <div class="row"></div>
