--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -1,3 +1,20 @@
+<label>Server Name</label>
+<br>
+<input
+    type="text"
+    class="form-control"
+    [(ngModel)]="serverName">
+
+<button class="btn btn-primary"
+[disabled]="!allowNewServer"
+(click)="onCreateServer()">
+Add Server</button>
+<p *ngIf="serverCreated; else noServer">Server was created, server name is {{ serverName }}</p>
+<ng-template #noServer><p>
+    No server is created.
+</p></ng-template>
+<app-server *ngFor="let server of servers"></app-server>
+
 <!-- <label>Server Name</label> -->
 <!-- <input
 type="text"
@@ -16,34 +33,20 @@ class="form-control"
 <p [innerText]="allowNewServer"></p>
 <p>{{ serverCreationStatus }}</p> -->
 
-<label>Server Name</label>
-<input
+<!-- <input
     type="text"
     class="form-control"
-    (input)="onUpdateServerName($event)">
-<br>
-<input
-    type="text"
-    class="form-control"
-    [(ngModel)]="serverName">
-<br>
-<!-- {{ serverName }} -->
-<br>
-<br>
+    (input)="onUpdateServerName($event)"> -->
 
-<button class="btn btn-primary"
-[disabled]="!allowNewServer"
-(click)="onCreateServer()">
-Add Server</button>
-<br>
+<!-- <br>
 <br>
 <p>{{ serverCreationStatus }}</p>
 
 <app-server></app-server>
-<app-server></app-server>
+<app-server></app-server> -->
 
 <!-- <p [innerText]="allowNewServer"></p> -->
-
+<!-- 
 <input
     type="text"
     class="form-control"
@@ -53,4 +56,5 @@ Add Server</button>
 </p>
 <button class="btn btn-success"
 [disabled]="username === ''"
-(click)="resetButton()">Reset</button>
+(click)="resetButton()">Reset</button> -->
+
